Added bootstrap, added default user

--- a/app/views/data_studios/index.slim
+++ b/app/views/data_studios/index.slim
@@ -1,2 +1,8 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+p.notice
+  = notice
+p.alert
+ = alert
+
+.container
+ .row
+  .col-12
