Set up the basic edit user form

--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -8,13 +8,18 @@ nav#sidebar
     li.clearfix
       .icon-container
         i.fas.fa-crop-alt
-      a href="#" Creative Studio
+      a href="#" Creative Automatic
     li.clearfix
       .icon-container
         i.fas.fa-crosshairs
-      a href="#" DSP
+      a href="#" Demand Side Platforms
     li.clearfix
       .icon-container
         i.fas.fa-chart-pie
-      a href="#" Reporting
+      a href="#" Unified Analytics
+    li.clearfix
+      .icon-container
+        i.fas.fa-users
+      = link_to "Users", users_path
+
 
