--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -13,5 +13,6 @@ html
     .content-wrapper.d-flex
       = render 'layouts/side_nav'
       .main-content
+        = render 'layouts/alert'
         = yield 
 
