--- a/app/assets/stylesheets/base/navigation.sass
+++ b/app/assets/stylesheets/base/navigation.sass
@@ -1,7 +1,6 @@
 nav#sidebar
-  width: 210px
-  min-width: 210px
-  max-width: 210px
+  min-width: 260px
+  max-width: 260px
   margin-right: 15px
   position: relative
   height: calc(100vh - 59px)
@@ -44,4 +43,27 @@ nav#sidebar
         a
           color: #1E263B
     
+
+
+.navbar
+  .nav-link
+    font-size: 14px
+    color: #7B8094
+    font-weight: 500
+    &:hover
+      color: #863399
+    &::after 
+      font-family: "Font Awesome 5 Free"
+      content: "\f107"
+      font-weight: 900
+      font-style: normal
+      font-variant: normal
+      text-rendering: auto
+      -webkit-font-smoothing: antialiased
+      border: none
+      color: #CFD1DF
+      margin-left: 6px
+      vertical-align: unset
+  .dropdown-item
+    font-size: 14px
 
