--- a/app/views/layouts/_nav.slim
+++ b/app/views/layouts/_nav.slim
@@ -3,6 +3,6 @@
     = image_tag "signmark.svg", style: 'width: 40px'
 
   .dropdown
-    a.nav-link.dropdown-toggle#navbarDropdown data-toggle="dropdown" type='button' = current_user.email
+    a.nav-link.dropdown-toggle#navbarDropdown data-toggle="dropdown" type='button' = current_user.full_name
     .dropdown-menu.dropdown-menu-right aria-labelledby='navbarDropdown'
       = link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item'
