--- a/app/views/data_studios/index.slim
+++ b/app/views/data_studios/index.slim
@@ -2,3 +2,10 @@
   .row
     .col-12
       h1.h5 Data Studio
+      ul
+        - @categories.each do |category|
+          li 
+            = category.name
+            - if category.children.any?
+              ul = recursive_tree(category)
+
