--- a/app/views/data_studios/index.slim
+++ b/app/views/data_studios/index.slim
@@ -4,24 +4,29 @@
       h1.h5 Data Studio
       .card
         .card-body
-          ul
-            - @categories.each do |category|
-              li data-toggle='collapse' data-target='#child#{category.id}' aria-expanded='false' aria-controls="child#{category.id}"
-                = category.name
-                - if category.children.any?
-                  ul.collapse id="child#{category.id}"
-                    = recursive_tree(category)
+          .row
+            .col-6
+              ul#taxonomy
+                - @categories.each do |category|
+                  - if category.children.any?
+                    li
+                      span.caret = category.name
+                      ul.nested
+                        = recursive_tree(category)
+                  - else
+                    li = category.name
+            .col-6
 
 
 
-// javascript:
-//   var toggler = document.getElementsByClassName("caret");
-//   var i;
+javascript:
+  var toggler = document.getElementsByClassName("caret");
+  var i;
 
-//   for (i = 0; i < toggler.length; i++) {
-//     toggler[i].addEventListener("click", function() {
-//       this.parentElement.querySelector(".nested").classList.toggle("active");
-//       this.classList.toggle("caret-down");
-//     });
-//   }
+  for (i = 0; i < toggler.length; i++) {
+    toggler[i].addEventListener("click", function() {
+      this.parentElement.querySelector(".nested").classList.toggle("active");
+      this.classList.toggle("caret-down");
+    });
+  }
 
