Added the basics of Tapclicks API endpoint

--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -25,6 +25,6 @@ nav#sidebar
     li.clearfix
       .icon-container
         i.fas.fa-chart-pie
-      a href="#" Analytics
+      = link_to 'Analytics', current_user.token_url, target: :_blank
 
 
