Added a ton of random stuff

--- a/app/views/layouts/_nav.slim
+++ b/app/views/layouts/_nav.slim
@@ -1,6 +1,6 @@
 .navbar.navbar-light.bg-light
   = link_to root_path, class: 'navbar-brand' do
-    = image_tag "signmark.svg", style: 'width: 40px'
+    = image_tag "logo-orion.svg", style: 'width: 94px; margin-left: 13px'
 
   .dropdown
     a.nav-link.dropdown-toggle#navbarDropdown data-toggle="dropdown" type='button' = current_user.full_name
