--- a/app/views/data_studios/index.slim
+++ b/app/views/data_studios/index.slim
@@ -2,31 +2,50 @@
   .row
     .col-12
       h1.h5 Data Studio
-      .card
-        .card-body
-          .row
-            .col-6
-              ul#taxonomy
-                - @categories.each do |category|
-                  - if category.children.any?
-                    li
-                      span.caret = category.name
-                      ul.nested
-                        = recursive_tree(category)
-                  - else
-                    li = category.name
-            .col-6
+      - if current_user.user_type == :agency
+        // If they are an agency
+        .card
+          .card-body
+            .row
+
+      - else
+        // If they are an advertiser
+        .card
+          .card-body
+            .row
+              .col-12
+                h1.h5 Getting Started - Step 1
+                p Tell us about your company so we can properly serve you.
+            = simple_form_for(@advertiser) do |f|
+              = f.input :is_agency, as: :hidden, input_html: { value: false }
+              .row
+                .col-4
+                  = f.input :company_name
+                .col-4
+                  = f.input :website, label: 'Website URL'
+                .col-4
+                  = f.input :logo_url, label: 'Upload Logo'
+
+                .col-4
+                   = f.input :industry, collection: industry_options, include_blank: false
+                .col-4
+                  = f.input :customer_target,  collection: customer_target_options, include_blank: false
+                .col-4
+                  = f.input :monthly_unique_visitors, collection: monthly_visitor_options, include_blank: false
+
+                .col-4
+                  = f.input :average_order_value, label: 'Average Order Value (AOV)'
+                .col-4
+                  = f.input :conversion_rate
+                .col-4
+                  = f.input :cost_per_acquisition, label: 'Cost Per Acquisition Goal (CPA)'
+
+                .col-4
+                  = f.input :current_media_mix, collection: media_mix_options, input_html: { multiple: true }, include_hidden: false
 
 
 
-javascript:
-  var toggler = document.getElementsByClassName("caret");
-  var i;
 
-  for (i = 0; i < toggler.length; i++) {
-    toggler[i].addEventListener("click", function() {
-      this.parentElement.querySelector(".nested").classList.toggle("active");
-      this.classList.toggle("caret-down");
-    });
-  }
-
+               
+                .col-12
+                  = f.submit 'Save & Get Started'
