--- a/app/views/devise/invitations/new.slim
+++ b/app/views/devise/invitations/new.slim
@@ -10,6 +10,7 @@
             = f.input :first_name
             = f.input :last_name
             = f.input :company
+            = f.input :user_type, collection: [['Agency', :agency], ['Advertiser', :advertiser]], as: :select
             = f.input :roles, collection: [['Super Admin', :root_admin], ['User', :user]], as: :radio_buttons, selected: @user.role, checked: @user.role
             - resource.class.invite_key_fields.each do |field|
               .form-inputs
