--- a/app/views/users/_form.slim
+++ b/app/views/users/_form.slim
@@ -3,5 +3,6 @@
   = f.input :last_name
   = f.input :company
   = f.input :email, as: :email
+  = f.input :user_type, collection: [['Agency', :agency], ['Advertiser', :advertiser]], as: :select
   = f.input :roles, collection: User::ROLES, as: :radio_buttons, selected: @user.role, checked: @user.role
   = f.button :submit, class: 'btn btn-primary btn-sm'
