Added most of the advertiser stuff

--- a/app/assets/stylesheets/data_studios.sass
+++ b/app/assets/stylesheets/data_studios.sass
@@ -28,3 +28,18 @@
     display: none
   .active 
     display: block
+
+
+.select2-container--bootstrap 
+  .select2-selection--single
+    height: 38px
+    padding: 8px 24px 8px 12px
+  .select2-selection--multiple
+    height: 38px
+    .select2-search--inline
+      .select2-search__field
+        height: 36px
+
+
+.light-text
+  color: #7B8094
