--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -5,9 +5,14 @@ html
     = csrf_meta_tags
     = csp_meta_tag
     link rel="shortcut icon" href=asset_url('favicon.png')
+    link href="http://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" 
+    link href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css" rel="stylesheet" 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    script src="http://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.full.js"
     script src="https://kit.fontawesome.com/52147ba709.js" crossorigin="anonymous"
+
+
   body
     = render 'layouts/nav'
     .content-wrapper.d-flex
