Added multiple updates to the campaigns/mailers

--- a/app/views/advertisers/_form_advertiser.slim
+++ b/app/views/advertisers/_form_advertiser.slim
@@ -76,7 +76,7 @@
 
     .col-12
 
-      = f.submit 'Update Profile', class: 'btn btn-primary float-right'
+      = f.submit 'Update', class: 'btn btn-primary float-right'
 
 
 
