--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -10,7 +10,7 @@
         li.nav-item
           = link_to 'Campaigns', campaigns_path, class: 'nav-link active'
         li.nav-item
-          a.nav-link href="#" Audiences
+          = link_to 'Audiences', studios_audiences_path, class: 'nav-link'
 
       .card
         .card-body
