--- a/app/views/campaigns/_form.slim
+++ b/app/views/campaigns/_form.slim
@@ -52,11 +52,11 @@
         .col-12
           = f.label '', label: "Flight Length (Start to End)"
         .col-5
-          = f.input :flight_start_date, as: 'string', label: false, placeholder: 'Select Start Date', input_html: { class: 'datepicker form-control' }
+          = f.input :flight_start_date, as: 'string', label: false, placeholder: 'Start Date', input_html: { class: 'datepicker form-control' }
         .col-2
           p.mt-2.text-center to
         .col-5
-          = f.input :flight_end_date, as: 'string', label: false, placeholder: 'Select End Date', input_html: { class: 'datepicker form-control' }
+          = f.input :flight_end_date, as: 'string', label: false, placeholder: 'End Date', input_html: { class: 'datepicker form-control' }
     .col-12
       = f.button :button, "Request IO",type: 'submit', name: "request_type", value: "insertion_order", class: 'btn btn-primary float-right ml-3'
       = f.button :button, "Request Recommendations",type: 'submit', name: "request_type", value: "recommendation", class: 'btn btn-primary float-right'
