--- a/app/views/platforms/index.slim
+++ b/app/views/platforms/index.slim
@@ -1,16 +1,15 @@
-.container-fluid
+.container-fluid.demand-side-platforms
   .row
-    .col-12.col-md-4
+    .col-12.col-md-6
       .card
-        .card-body
-          h1.h5 Google DV360
+        .card-body.d-flex.align-items-center
+          .text-center
+            = image_tag "dv360_logo.png", class: 'dv-image'
+            = link_to "Access DV360", "https://displayvideo.google.com", class: 'btn btn-primary', target: '_blank'
 
-    .col-12.col-md-4
+    .col-12.col-md-6
       .card
-        .card-body
-          h1.h5 The Trade Desk
-
-    .col-12.col-md-4
-      .card
-        .card-body
-          h1.h5 Zeta Global
+        .card-body.text-center.d-flex.align-items-center
+          .text-center
+            = image_tag "zeta_logo.png", class: 'zeta-image'
+            = link_to "Access Zeta", "https://dsp.zetaglobal.net/", class: 'btn btn-primary', target: '_blank'
