--- a/app/assets/stylesheets/demand_side_platforms.sass
+++ b/app/assets/stylesheets/demand_side_platforms.sass
@@ -1,6 +1,8 @@
 .demand-side-platforms
+  .bottom-row
+    margin-top: 30px
   .card
-    height: calc(100vh - 120px)
+    height: calc(50vh - 75px)
     .text-center
       width: 100%
     .dv-image
