--- a/app/views/platforms/index.slim
+++ b/app/views/platforms/index.slim
@@ -1,15 +1,39 @@
 .container-fluid.demand-side-platforms
   .row
-    .col-12.col-md-6
+    .col-12.col-md-4
       .card
         .card-body.d-flex.align-items-center
           .text-center
             = image_tag "dv360_logo.png", class: 'dv-image'
             = link_to "Access DV360", "https://displayvideo.google.com", class: 'btn btn-primary', target: '_blank'
 
-    .col-12.col-md-6
+    .col-12.col-md-4
       .card
         .card-body.text-center.d-flex.align-items-center
           .text-center
             = image_tag "zeta_logo.png", class: 'zeta-image'
             = link_to "Access Zeta", "https://dsp.zetaglobal.net/", class: 'btn btn-primary', target: '_blank'
+
+    .col-12.col-md-4
+      .card
+        .card-body.text-center.d-flex.align-items-center
+          .text-center
+            = image_tag "criteo_logo.png", class: 'dv-image'
+            = link_to "Access Criteo", "https://account.criteo.com/auth/XUI/criteo-login/#/login?realm=criteo&goto=https%253A%252F%252Faccount.criteo.com%252Fauth%252Foauth2%252Fauthorize%253Fclient_id%253Daxe%2526realm%253Dcriteo%2526response_type%253Dcode%2526redirect_uri%253Dhttps%25253A%25252F%25252Fmarketing.criteo.com%25252Fcampaigns%25252Fauth%2526state%253Dlist", class: 'btn btn-primary', target: '_blank'
+
+  .row.bottom-row
+    .col-12.col-md-6
+      .card
+        .card-body.text-center.d-flex.align-items-center
+          .text-center
+            = image_tag "amazonads_logo.png", class: 'dv-image'
+            = link_to "Access Amazon", "https://www.amazon.com/ap/signin?openid.return_to=https%3A%2F%2Fadvertising.amazon.com%2Fdsp%2Fentities&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.assoc_handle=amzn_bt_desktop_us&openid.mode=checkid_setup&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&ssoResponse=eyJ6aXAiOiJERUYiLCJlbmMiOiJBMjU2R0NNIiwiYWxnIjoiQTI1NktXIn0.w6ySUQ7yd-stujXiwecZmg68nBGZGj8q5pPr9XbVScDgF9DdHiUD_A.-jM-4Xuq1QU6HRr-.XDC-JRM-SKpPGalCCyktWCbvt_VbkNwgg657nnMFccqU2QEzFJkuMwYZS7_Wx4sbdpguvh0PekJ-6cTZKS7ed3iLpiN7YzJkIZrHMc4eWbbtYNhCMRc8UyqqK_Xmuc5RztLjiBHgLYcCFiIW5p7sbYEECXQyON6fxtvR1mm8_Rzz0DgQuAsMCUBt3HBTdsiKtiHX1fATy11AIOvUOuIHAgWqxuWr1LxUBKhctkDd3yTvRFXJwRbh2zXyOtonp9LgMAxBrQ.h1mF4AXJueMO_GQddkHURw", class: 'btn btn-primary', target: '_blank'
+
+    .col-12.col-md-6
+      .card
+        .card-body.text-center.d-flex.align-items-center
+          .text-center
+            = image_tag "tradedesk_logo.png", class: 'dv-image'
+            = link_to "Access The Trade Desk", "https://auth.thetradedesk.com/Account/Login?ReturnUrl=%2Fconnect%2Fauthorize%2Fcallback%3Fresponse_type%3Did_token%26response_mode%3Dform_post%26scope%3Dopenid%2520profile%26client_id%3Ddesk%26nonce%3D2db3be9a8b20d32fcc20e89b1f9378a3%26state%3DZXQEnR3TNa8KBfdvFTp4iPmN1mJKud84HoHvKjAJRhf8pvtslI2oiubGY8HOk%252BK6dj%252BTuFSHyzwgFx1Y3busM66M2AaqXC1LRd2rQHsY14wiozWIoR%252FfAgEo1KY7KMH4uXvKl5r1nQfSFGfhm19KNK6ZBo2t83MPkRgLl7Gr9a%252FRO1rnoAYlQ29nLbgqCxFfgO8z7SnyZZxA3%252BB5XzO8SEm4jTu8ZhEjd%252Fto6aW4XdM%253D%26redirect_uri%3Dhttps%253A%252F%252Fdesk.thetradedesk.com%252Fsignin-oidc%26appReturnUrl%3Dhttps%25253A%25252F%25252Fdesk.thetradedesk.com%25252F", class: 'btn btn-primary', target: '_blank'
+
+
