Update form to show advertiser name, default number values, backend validation

--- a/app/views/campaigns/_form.slim
+++ b/app/views/campaigns/_form.slim
@@ -6,12 +6,14 @@
     .col-4
       .form-group.mb-4
         = f.input :url, label: 'Campaign URL'
+
     - if current_user.user_type == 'advertiser'
       = f.input :advertiser_id, as: :hidden, input_html: { value: current_user.advertiser_profile_id }
+
     - elsif current_user.user_type == 'agency'
       .col-4
         .form-group.mb-4
-          = f.input :advertiser_id
+          = f.association :advertiser, collection: current_user.advertisers, label_method: :company_name, value_method: :id, include_blank: '-- Please select --'
     .col-4
       .form-group.mb-4
         = f.input :goal, collection: goal_options, include_blank: false, input_html: { class: 'select2-input form-control' }
@@ -24,14 +26,14 @@
         .input-group
           .input-group-prepend
             .input-group-text $
-          = f.input :cpa_goal, label: false, input_html: { class: 'form-control' }
+          = f.input :cpa_goal, label: false, input_html: { class: 'form-control', min: "1"}
     .col-4
       .form-group.mb-4
         = f.label :roas_goal, label: 'ROAS Goal'
         .input-group
-          = f.input :roas_goal, label: false, input_html: { class: 'form-control' }
+          = f.input :roas_goal, label: false, input_html: { class: 'form-control', min: "1"}
           .input-group-append
-            .input-group-text 
+            .input-group-text
               | : 1
     .col-4
       .form-group.mb-4
@@ -39,7 +41,7 @@
         .input-group
           .input-group-prepend
             .input-group-text $
-          = f.input :budget, label: false, input_html: { class: 'form-control' }
+          = f.input :budget, label: false, input_html: { class: 'form-control', min: "1"}
     .col-4
       .form-group.mb-4
         = f.input :geography
@@ -60,12 +62,11 @@
     .col-12
       = f.button :button, "Request IO",type: 'submit', name: "request_type", value: "insertion_order", class: 'btn btn-primary float-right ml-3'
       = f.button :button, "Request Recommendations",type: 'submit', name: "request_type", value: "recommendation", class: 'btn btn-primary float-right'
-      
 
-    javascript:
-      $(document).ready(function() {
-        $( ".datepicker" ).datepicker({
-          dateFormat: "yy/mm/dd"
-        });
-      });
-      
+
+javascript:
+  $(document).ready(function() {
+    $( ".datepicker" ).datepicker({
+      dateFormat: "yy/mm/dd"
+    });
+  });
