--- a/app/views/campaigns/_form.slim
+++ b/app/views/campaigns/_form.slim
@@ -8,7 +8,7 @@
         = f.input :url, label: 'Campaign URL'
 
     - if current_user.user_type == 'advertiser'
-      = f.input :advertiser_id, as: :hidden, input_html: { value: current_user.advertiser_profile_id }
+      = f.input :advertiser_id, as: :hidden, input_html: { value: current_user.advertiser_profile.id }
 
     - elsif current_user.user_type == 'agency'
       .col-4
