--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -1,9 +1,8 @@
-
 .container-fluid
   .row
     .col-12
       h1.h5.mb-4.float-left Data Studio > Campaigns
-      = link_to 'Edit Profile', edit_advertiser_path(current_user.advertiser_profile_id), class: 'btn btn-primary float-right'
+      = link_to "Edit #{current_user.advertiser_profile.company_name} Profile", edit_advertiser_path(current_user.advertiser_profile.id), class: 'btn btn-primary float-right'
   .row
     .col-12
       ul.nav.nav-tabs
@@ -29,7 +28,7 @@
                     th scope="col" Action
                   tbody
                     - @campaigns.each do |campaign|
-                      tr 
+                      tr
                         td = campaign.advertiser.company_name
                         td = campaign.name
                         td = "#{campaign.flight_start_date&.strftime("%m/%d/%Y")} - #{campaign.flight_end_date&.strftime("%m/%d/%Y")}"
