Update the dsp view to 2 by 2, temp hidding the criteo box for now

--- a/app/assets/stylesheets/demand_side_platforms.sass
+++ b/app/assets/stylesheets/demand_side_platforms.sass
@@ -7,9 +7,11 @@
       width: 100%
     .dv-image
       width: 80%
-      margin: 0 auto 30px
+      margin: 0 auto
       display: block
     .zeta-image
-      width: 30%
+      height: 65px
       margin: 0 auto 30px
       display: block
+    .access-btn
+      margin-top: 30px
