--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -1,4 +1,4 @@
-.container-fluid
+.container-fluid.campaigns
   .row
     .col-12
       h1.h5.mb-4.float-left Data Studio > Campaigns
@@ -33,4 +33,6 @@
                         td = campaign.name
                         td = "#{campaign.flight_start_date&.strftime("%m/%d/%Y")} - #{campaign.flight_end_date&.strftime("%m/%d/%Y")}"
                         td = campaign.goal
-                        td = link_to "Delete", campaign_path(campaign), method: :delete, data: { confirm: 'Are you sure?' }
+                        td
+                          = link_to "Edit", edit_campaign_path(campaign), class: 'action-link'
+                          = link_to "Delete", campaign_path(campaign), method: :delete, data: { confirm: 'Are you sure?' }, class: 'action-link'
