--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -24,6 +24,7 @@
                     th scope="col" Advertiser
                     th scope="col" Name
                     th scope="col" Flight
+                    th scope='col' Budget
                     th scope="col" Goal
                     th scope="col" Action
                   tbody
@@ -32,6 +33,7 @@
                         td = campaign.advertiser.company_name
                         td = campaign.name
                         td = "#{campaign.flight_start_date&.strftime("%m/%d/%Y")} - #{campaign.flight_end_date&.strftime("%m/%d/%Y")}"
+                        td = "$ #{campaign.budget.floor}"
                         td = campaign.goal
                         td
                           = link_to "Edit", edit_campaign_path(campaign), class: 'action-link'
