Render fav audience in campaign with checkboxes

--- a/app/assets/stylesheets/campaigns.sass
+++ b/app/assets/stylesheets/campaigns.sass
@@ -1,3 +1,10 @@
 .campaigns
   .action-link
     margin-right: 10px
+  .audience-targeting
+    height: 125px
+    overflow-y: scroll
+    overflow-x: hidden
+    padding: 5px 15px
+    border: 1px solid #ced4da
+    border-radius: 0.25rem
