--- a/app/views/campaigns/_form.slim
+++ b/app/views/campaigns/_form.slim
@@ -59,10 +59,10 @@
       .form-group.mb-4
         = f.label :audience_targeting
         .audience-targeting
-          = f.input :audience_targeting, collection: current_user.audiences, label_method: :name,  value_method: :id, label: '', input_html: { multiple: true }, include_blank: "Please select from the audience tab", as: :check_boxes
+          = f.association :audiences, collection: current_user.audiences, label_method: :name, value_method: :id, as: :check_boxes
     .col-12
-      = f.button :button, "Request IO",type: 'submit', name: "request_type", value: "insertion_order", class: 'btn btn-primary float-right ml-3'
-      = f.button :button, "Request Recommendations",type: 'submit', name: "request_type", value: "recommendation", class: 'btn btn-primary float-right'
+      = f.button :button, "Request IO", type: 'submit', name: "request_type", value: "insertion_order", class: 'btn btn-primary float-right ml-3'
+      = f.button :button, "Request Recommendations", type: 'submit', name: "request_type", value: "recommendation", class: 'btn btn-primary float-right'
 
 javascript:
   $(document).ready(function() {
