--- a/app/views/campaigns/_form.slim
+++ b/app/views/campaigns/_form.slim
@@ -59,7 +59,7 @@
       .form-group.mb-4
         = f.label :audience_targeting
         .audience-targeting
-          = f.association :audiences, collection: current_user.audiences, label_method: :name, value_method: :id, as: :check_boxes
+          = f.association :audiences, collection: current_user.audiences, label_method: :name, value_method: :id, as: :check_boxes, label: "Add more from the audience tab"
     .col-12
       = f.button :button, "Request IO", type: 'submit', name: "request_type", value: "insertion_order", class: 'btn btn-primary float-right ml-3'
       = f.button :button, "Request Recommendations", type: 'submit', name: "request_type", value: "recommendation", class: 'btn btn-primary float-right'
