Update campaign index page

--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -24,7 +24,7 @@
                 thead.thead-dark
                   tr
                     th scope="col" Advertiser
-                    th scope="col" Name
+                    th scope="col" Campaign
                     th scope="col" Flight
                     th scope='col' Budget
                     th scope="col" Goal
