--- a/app/views/advertisers/new.html.slim
+++ b/app/views/advertisers/new.html.slim
@@ -1,5 +1,10 @@
-h1 New advertiser
-
-== render 'form'
-
-= link_to 'Back', advertisers_path
+.container-fluid
+  .row
+    .col-12
+      h1 New advertiser
+      .row
+        .col-12
+          .card
+            .card-body
+              = render 'form'
+              = link_to 'Back', advertisers_path
