--- a/app/views/advertisers/index.html.slim
+++ b/app/views/advertisers/index.html.slim
@@ -1,28 +1,31 @@
 .container-fluid.advertisers
   .row
-    .col-10
+    .col-12
       h1.h5.mb-4.float-left
         | Data Studio >
-        = link_to "#{current_user.company}", advertiser_path(current_user.advertiser_profile.id)
+        = link_to "#{current_user.company}", edit_advertiser_path(current_user.advertiser_profile.id)
         | > Advertisers
-    .col-2
-      = link_to 'New Advertiser', new_advertiser_path
   .row
     .col-12
       .card
         .card-body
-          table.table.table-striped
-            thead.thead-dark
-              tr
-                th Name
-                th Campaign(s)
-                th Actions
-            tbody
-              - @advertisers.each do |advertiser|
-                tr
-                  td = advertiser.company_name
-                  td = advertiser&.campaigns&.count
-                  td
-                    = link_to 'Campaigns', campaigns_path(advertiser: advertiser)
-                    = link_to 'Edit', edit_advertiser_path(advertiser)
-                    = link_to 'Destroy', advertiser, data: { confirm: 'Are you sure?' }, method: :delete
+          .row
+            .col-12
+              = link_to 'New Advertiser', new_advertiser_path, class: 'btn btn-primary float-right mb-3'
+          .row
+            .col-12
+              table.table.table-striped
+                thead.thead-dark
+                  tr
+                    th Name
+                    th Campaign(s)
+                    th Actions
+                tbody
+                  - @advertisers.each do |advertiser|
+                    tr
+                      td = advertiser.company_name
+                      td = advertiser&.campaigns&.count
+                      td
+                        = link_to 'Campaigns', campaigns_path(advertiser: advertiser)
+                        = link_to 'Edit', edit_advertiser_path(advertiser)
+                        = link_to 'Destroy', advertiser, data: { confirm: 'Are you sure?' }, method: :delete
